# node/src/routes/protected_hello.ts
@@ -1,9 +1,8 @@
 import { Router } from 'express';
-import { checkAcl, passport } from '../middlewares/auth.js';
-
+import { checkAcl } from '../middlewares/auth.js';
+import type { User } from '../types/auth.d.ts';
 const router = Router();
 
-// swagger
 /**
 * @swagger
 * /protected/hello:
@@ -12,7 +11,7 @@ const router = Router();
 *   description: Returns a greeting message for authenticated users. Requires a valid JWT token.
 *   tags: [Protected]
 *   security:
-*      - bearerAuth: []
+*     - bearerAuth: []
 *   responses:
 *    200:
 *     description: A greeting message
@@ -23,8 +22,13 @@ const router = Router();
 *        properties:
 *         message:
 *          type: string
+*          example: "Hello from protected route"
+*    401:
+*       $ref: '#/components/responses/UnauthorizedError'
+*    403:
+*       $ref: '#/components/responses/ForbiddenError'
 */
-router.get('/hello', passport.authenticate('jwt', { session: false }), async (req, res) => {
+router.get('/hello', checkAcl(), async (_, res) => {
     try {
         res.send({
             message: 'Hello from protected route',
@@ -43,7 +47,7 @@ router.get('/hello', passport.authenticate('jwt', { session: false }), async (re
 *   description: Returns a greeting message for authenticated users. Requires a valid JWT token.
 *   tags: [Protected]
 *   security:
-*      - bearerAuth: []
+*     - bearerAuth: []
 *   responses:
 *    200:
 *     description: A greeting message
@@ -53,15 +57,31 @@ router.get('/hello', passport.authenticate('jwt', { session: false }), async (re
 *        type: object
 *        properties:
 *         message:
-*          type: string
-*         req:
-*          type: object
+*           type: string
+*           example: "Hello from protected route"
+*         user:
+*           type: object
+*           properties:
+*            user_id:
+*             type: string
+*             example: "34b224dd-a533-49dc-954a-d9bd25394609"
+*            email:
+*             type: string
+*             example: "admin@sgcc.sogang.ac.kr"
+*            username:
+*             type: string
+*             example: "admin"
+*    401:
+*       $ref: '#/components/responses/UnauthorizedError'
+*    403:
+*       $ref: '#/components/responses/ForbiddenError'
 */
-router.get('/acl_hello', checkAcl('acl_hello', 'jwt'), async (req, res) => {
+router.get('/acl_hello', checkAcl({ permission: 'acl_hello', strategy: 'jwt' }), async (req, res) => {
     try {
+        const { user_id, email, username } = req.user as User;
         res.send({
             message: 'Hello from protected route',
-            user: req.user
+            user: { user_id, email, username }
         });
     } catch (error) {
         res.status(500).send({ error: error });
